styles/Sidebar.module.scss
@use "variables";
$sidebarTransition: right 0.3s ease-in-out;
$sidebarPadding: 30px;

.sidebar {
  position: fixed;
  //height: 100%;
  width: variables.$sidebarWidth;
  right: calc(-1 * #{variables.$sidebarWidth});
  transition: $sidebarTransition;
  &.shown {
    right: 0;
  }
  top: 0;
  bottom: 0;
  overflow: auto;
  z-index: 1000;
  background: #eeeeee;
  border-left: 1px solid black;
  box-shadow: -1px 0 5px black;
  padding: $sidebarPadding;
  a {
    text-decoration: underline;
    color: teal;
  }
}

.sidebarButton:global(.leaflet-control) {
  // TODO: There's probably a better way to match the Leaflet controls
  font-size: x-large;
  position: fixed;
  top: 10px;
  right: 16px;
  transition: opacity 0.3s ease-in-out, $sidebarTransition;
  .shown & {
    opacity: 0.5;
    right: calc(#{variables.$sidebarWidth} + 16px);
    //display: none;
  }
  width: 32px;
  height: 32px;
  background: white;
  padding: 4px;
  border: 1px solid lightgray;
  box-shadow: 0 0 1px black;
  border-radius: 2px;
  cursor: pointer;
  text-align: center;
  line-height: normal;

  display: flex;
  justify-content: center;
  align-items: center;
}

.sidebarCloseButton {
  position: fixed;
  right: 24px;
  top: 10px;
  width: 20px;
  height: 20px;
}

.sidebarContent {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}

.sidebarContent h1 {
  text-align: center;
  line-height: 1.2em;
  font-size: 2.2em;
  font-weight: bold;
}

.sidebarContent h2 {
  margin-top: 20px;
  margin-bottom: -10px;
  font-size: 1.4em;
  font-weight: bold;
}

.sidebarContent h3 {
  margin-top: 16px;
}

.sidebarContent p {
  margin-top: 20px;
}

.searchContainer label {
  display: none;
}

.searchContainer > div {
  /* The whole CUIAutoComplete container, input + dropdown.
   * Since it doesn't support adding a className... */
  margin-top: -8px;
}

.searchInput {
  box-shadow: var(--chakra-shadows-md);
}

.searchDropdown {
  max-height: 200px;
  overflow: auto;
  position: absolute;
  width: calc(100% - 2 * #{$sidebarPadding});
  li {
    cursor: pointer;
  }
}

.timeframeSelect {
  white-space: nowrap;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  //margin-top: 30px;
  margin-bottom: 30px;
  h3 {
    margin-bottom: 8px;
  }
}

.timeframeButton {
  width: 100%;
  text-align: center;
}

.linkIcons {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  margin-bottom: 8px;
  svg {
    color: black;
    width: 48px;
  }
}

.attributions {
  font-size: small;
}

